--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header>
-    <img src="images/logo.png" class="logo" alt="Campus Critters Chronicle Logo" />
+    <img src="AAW Logo.png" class="logo" alt="Campus Critters Chronicle Logo" />
     <h1>Campus Critters Chronicle</h1>
     <nav>
       <a href="index.html">Home</a>
@@ -18,18 +18,18 @@
 
   <div class="grid">
     <a class="card" href="post1.html">
-      <img src="images/rescue1.jpg" alt="Rescue Story 1" />
-      <div class="card-title">The Kitten by the Canteen</div>
+      <img src="Makbool.jpeg"/>
+      <div class="card-title">Makbool can speak!</div>
     </a>
 
     <a class="card" href="post2.html">
-      <img src="images/rescue2.jpg" alt="Rescue Story 2" />
-      <div class="card-title">A Pup in the Parking Lot</div>
+      <img src="Cookie.jpeg"/>
+      <div class="card-title">Puppy stealer Cookie</div>
     </a>
 
     <a class="card" href="post3.html">
-      <img src="images/rescue3.jpg" alt="Rescue Story 3" />
-      <div class="card-title">The Injured Crow</div>
+      <img src="Kittu.jpeg" alt="Rescue Story 3" />
+      <div class="card-title">Kittu's sky dive</div>
     </a>
   </div>
 
