--- a/post3.html
+++ b/post3.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>The Injured Crow</title>
+  <title>Kittu's sky dive</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -26,8 +26,8 @@ Kittu had the time of his life with us, moving between Hall 4 and Hall 13, enjoy
 
 After a week, his injury healed completely.
 And then came the bittersweet moment,it was time to say goodbye. We released Kittu near the same tree in Hall 4 where we found him, hoping he’d return to the life he is belonged to. I still hope he remembers us and stays somewhere close to that tree, living happily and freely.</p>
-    <img src="images/crow_story.jpg" />
-    <video controls src="videos/crow_rescue.mp4"></video>
+    <img src="Kittu - 1.jpeg" />
+    <video controls src="Kittu - 2.mp4"></video>
     <a class="back-link" href="index.html">← Back to Home</a>
   </div>
 
