--- a/post1.html
+++ b/post1.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header>
-    <img src="images/logo.png" class="logo" />
+    <img src="AAW Logo.png" class="logo" />
     <h1>Campus Critters Chronicle</h1>
     <nav>
       <a href="index.html">Home</a>
