--- a/post2.html
+++ b/post2.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header>
-    <img src="images/logo.png" class="logo" />
+    <img src="AAW Logo.png" class="logo" />
     <h1>Campus Critters Chronicle</h1>
     <nav>
       <a href="index.html">Home</a>
@@ -27,7 +27,6 @@ And then something unexpected happened. One day, Cookie did something no one cou
 Even as the pups nipped and tugged, leaving her scratched and bruised, Cookie never faltered. She kept them warm, safe, and loved. She gave all she had, though her own heart had known sorrow. One of Goldie’s pups still roams near Mama Mio, a living reminder of Cookie’s fierce, selfless love.
 
 In 2024, Cookie passed away, likely from distemper. She bore her pain silently, as she had done all her life, choosing to spare others her suffering and fade quietly. Yet for those who knew her, Cookie’s memory is indelible. She was not just a dog. She was a heart that chose love over sorrow, kindness over despair, every single day. Even now, volunteers and friends remember her not for the sadness she endured, but for the warmth and life she shared so freely.</p>
-    <img src="images/pup_story.jpg" />
   </div>
 
   <footer>© 2025 Campus Critters Chronicle</footer>
