--- a/post1.html
+++ b/post1.html
@@ -30,7 +30,7 @@
     }
     img, video {
       width: 100%;
-      height: 33vh; /* 1/3rd of screen height */
+      height: 100%; /* 1/3rd of screen height */
       object-fit: cover;
       border-radius: 10px;
       margin: 20px 0;
