--- a/post1.html
+++ b/post1.html
@@ -41,7 +41,7 @@ We then managed to get the bird adopted elsewhere, and she settled into her new 
   <footer>
       © 2025 Campus Critters Chronicle
       <br>
-      <a href="https://www.instagram.com/" target="_blank" style="text-decoration:none;">
+      <a href="https://www.instagram.com/animal_allies_iitk?igsh=NGpjM2E1Y3I3bngw&utm_source=qr" target="_blank" style="text-decoration:none;">
         <img src="instagram.png" alt="Instagram" style="width:24px; height:24px; vertical-align:middle; margin-top:8px;">
       </a>
     </footer>
