--- a/post1.html
+++ b/post1.html
@@ -1,22 +1,11 @@
+<!-- post1.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Makbool can speak!</title>
+  <title></title>
   <link rel="stylesheet" href="style.css" />
-</head>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      line-height: 1.6;
-    }
-    p {
-      text-align: justify;
-    }
-  </style>
 </head>
 <body>
   <header>
@@ -34,19 +23,14 @@
 Instead, the next day the parrot became even more determined and started trying to enter the house every time the front door opened. Eventually, a simple trap was laid using food inside a cage, and the bird fell for the bait almost immediately. What shocked everyone was what happened next - as soon as she was inside the cage, she began to speak and repeatedly said, “Mithuu, Mithuu…”. It was then clear that she was not a wild bird but a lost or abandoned pet who had somehow reached that tree and, after being fed, decided she wanted to turn that house into her home.
 
 We then managed to get the bird adopted elsewhere, and she settled into her new home very quickly. Today, she confidently bullies their pet dogs and hamsters and has even taken on the role of a food inspector in the house. Her new owner named her Makbool after one of the Bigg Boss winners, and true to her name, she now rules her new home like a tiny celebrity.</p>
-
-    <img src="Makbool - 2.jpeg" alt="Makbool the parrot" />
-    <video controls src="Makbool - 1.mp4"></video>
-    <a class="back-link" href="index.html">← Back to Home</a>
   </div>
 
   <footer>
-      © 2025 Campus Critters Chronicle
-      <br>
-      <a href="https://www.instagram.com/animal_allies_iitk?igsh=NGpjM2E1Y3I3bngw&utm_source=qr" target="_blank" style="text-decoration:none;">
-        <img src="instagram.png" alt="Instagram" style="width:24px; height:24px; vertical-align:middle; margin-top:8px;">
-      </a>
-    </footer>
+    © 2025 Campus Critters Chronicle
+    <br>
+    <a href="https://www.instagram.com/" target="_blank" style="text-decoration:none;">
+    <img src="instagram.png" alt="Instagram" style="width:24px; height:24px; vertical-align:middle; margin-top:8px;">
+    </a>
+  </footer>
 </body>
 </html>
-
