--- a/post2.html
+++ b/post2.html
@@ -29,7 +29,11 @@ Even as the pups nipped and tugged, leaving her scratched and bruised, Cookie ne
 In 2024, Cookie passed away, likely from distemper. She bore her pain silently, as she had done all her life, choosing to spare others her suffering and fade quietly. Yet for those who knew her, Cookie’s memory is indelible. She was not just a dog. She was a heart that chose love over sorrow, kindness over despair, every single day. Even now, volunteers and friends remember her not for the sadness she endured, but for the warmth and life she shared so freely.</p>
   </div>
 
-  <footer>© 2025 Campus Critters Chronicle</footer>
+  <footer>
+    © 2025 Campus Critters Chronicle
+    <a href="https://www.instagram.com/animal_allies_iitk?igsh=NGpjM2E1Y3I3bngw&utm_source=qr" target="_blank" style="text-decoration:none;">
+    <img src="instagram.png" alt="Instagram" style="width:24px; height:24px; vertical-align:middle; margin-top:8px;">
+  </footer>
 </body>
 </html>
 
