--- a/post3.html
+++ b/post3.html
@@ -31,6 +31,10 @@ And then came the bittersweet moment,it was time to say goodbye. We released Kit
     <a class="back-link" href="index.html">← Back to Home</a>
   </div>
 
-  <footer>© 2025 Campus Critters Chronicle</footer>
+  <footer>
+    © 2025 Campus Critters Chronicle
+    <a href="https://www.instagram.com/animal_allies_iitk?igsh=NGpjM2E1Y3I3bngw&utm_source=qr" target="_blank" style="text-decoration:none;">
+    <img src="instagram.png" alt="Instagram" style="width:24px; height:24px; vertical-align:middle; margin-top:8px;">
+  </footer>
 </body>
 </html>
