--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   </div>
 
   <footer>
-    © 2025 Campus Critters Chronicle — Compassion on Campus
+    © 2025 Campus Critters Chronicle
   </footer>
 </body>
 </html>
