--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
 
   <footer>
     © 2025 Campus Critters Chronicle
+    <br>
+    <a href="https://www.instagram.com/animal_allies_iitk?igsh=NGpjM2E1Y3I3bngw&utm_source=qr" target="_blank" style="text-decoration:none;">
+    <img src="instagram.png" alt="Instagram" style="width:24px; height:24px; vertical-align:middle; margin-top:8px;">
+    </a>
   </footer>
 </body>
 </html>
