--- a/post3.html
+++ b/post3.html
@@ -25,7 +25,7 @@ At first, the little squirrel was terrified, but slowly it began to trust us. So
 Kittu had the time of his life with us, moving between Hall 4 and Hall 13, enjoying unlimited fruits, milk, and nuts. More than anything, he became the centre of our attention. We treated him like our own baby, cleaned his wound, and took care of him every single day. 
 
 After a week, his injury healed completely.
-And then came the bittersweet moment,it was time to say goodbye. We released Kittu near the same tree in Hall 4 where we found him, hoping he’d return to the life he is belonged to. I still hope he remembers us and stays somewhere close to that tree, living happily and freely.</p>
+And then came the bittersweet moment,it was time to say goodbye. We released Kittu near the same tree in Hall 4 where we found him, hoping he’d return to the life he is belonged to. I still hope he remembers us and stays somewhere close to that tree, living happily and freely. - Nandini</p>
     <img src="Kittu - 1.jpeg" />
     <video controls src="Kittu - 2.mp4"></video>
     <a class="back-link" href="index.html">← Back to Home</a>
