--- a/post1.html
+++ b/post1.html
@@ -22,7 +22,7 @@
     <h2 style = "font-family: 'Quicksand';font-weight: bold;">Makbool can speak!</h2>
     <p style = "text-align:justify;font-family: 'Quicksand';">In August 2024, AWC received an unusual complaint from old SBRA - not about a dog or a cat, but about a parrot trying to get into someone’s house. The resident explained that a green parrot had suddenly appeared a couple of days earlier on a tree beside their quarter and would sit very close to the building, as if she wasn’t afraid of people at all. <br> <br> Because the bird looked weak, the residents began offering her food for a few days, thinking she might just recover and fly away.
 
-Instead, the parrot became determined and started trying to fly into the house every time the front door opened. Eventually, a simple trap was laid using food inside a cage, and the bird fell for the bait almost immediately. What shocked everyone was what happened next - as soon as she was inside the cage, she began to speak and repeatedly said, “Mithuu hai, Mithuu hai…”. It was then clear that she was not a wild bird but a lost or abandoned pet who had somehow reached that tree and, after being fed, decided she wanted to turn that house into her home.<br><br>
+Instead, the parrot became determined and started trying to fly into the house every time the front door opened. Eventually, we laid a simple trap using food inside a cage, and the bird fell for the bait almost immediately. What shocked everyone was what happened next - as soon as she was inside the cage, she began to speak and repeatedly said, “Mithuu hai, Mithuu hai…”. It was then clear that she was not a wild bird but a lost or abandoned pet who had somehow reached that tree and, after being fed, decided she wanted to turn that house into her home.<br><br>
 
 We then managed to get the bird adopted elsewhere, and she settled into her new home very quickly. Today, she confidently bullies their pet dogs and hamster and has even taken on the role of a food inspector in the house. Her new owner named her Makbool after one of the Bigg Boss winners, and true to her name, she now rules her new home like a tiny celebrity.</p>
     
@@ -39,3 +39,4 @@ We then managed to get the bird adopted elsewhere, and she settled into her new 
 </body>
 
 </html>
+
